--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
     text-align: center;
   }
 
-  main>.intro {
+  main .intro {
     font-family: 'Reem Kufi', sans-serif;
     font-size: 3.75em;
     font-weight: 600;
   }
 
-  main>.tagline {
+  main .tagline {
     font-size: 1.5rem;
     margin: 2rem 0;
     font-weight: 100;
@@ -114,7 +114,6 @@
   .devto svg {
     margin-bottom: -0.20rem;
     margin-left: 0.675rem;
-    ;
     width: 2.65rem;
     height: 2.65rem;
   }
@@ -130,13 +129,8 @@
 
   <title>Francesco ranellucci</title>
 
-  <link rel="icon" href="favicon.ico" type="image/png" />
-
   <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/themes/indigo-white.css">
 </head>
 
 <body>
@@ -146,17 +140,18 @@
       sports and outdoor activities.</div>
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
-      <i class="fa-thin fa-square-envelope"></i>
-      <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf">
-        <title>CV</title>
-      </a>
       <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
           class="fas fa-address-card"></i></a>
+      <a target="_blank" href="https://frr0.github.io/bio/"><i class="fas fa-user"></i></a>
       <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
       <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
+      <!-- <a target="_blank" href=""><i class="fab fa-linkedin"></i></a> -->
+      <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
+      <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
       <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
       <a target="_blank" href="https://t.me/joinchat/FbYr00z8Yf5hZjY0"><i class="fab fa-telegram"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>
+      <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
     </div>
   </main>
 </body>
