--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
       <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
-      <a target="_blank" href="https://t.me/joinchat/FbYr00z8Yf5hZjY0"><i class="fab fa-telegram"></i></a>
+      <a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>
       <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
     </div>
