--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   }
 
   main {
-    background: #EDEDED;
+    background: #f4cccc;
     color: #4B5658;
   }
 
@@ -149,7 +149,7 @@
       <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
       <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
-      <a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i></a>
+      <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>
       <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
     </div>
