--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <div class="icons-social">
       <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
           class="fas fa-address-card"></i></a>
-      <a target="_blank" href="https://frr0.github.io/bio/"><i class="fas fa-user"></i></a>
+      <!-- <a target="_blank" href="https://frr0.github.io/bio/"><i class="fas fa-user"></i></a> -->
       <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
       <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
       <!-- <a target="_blank" href=""><i class="fab fa-linkedin"></i></a> -->
