--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   }
 
   .icons-social i {
-    font-size: 3em;
+    font-size: 1.6em;
   }
 
   /* Custom Styles */
@@ -98,7 +98,7 @@
   }
 
   main .tagline {
-    font-size: 1.5rem;
+    font-size: 1.0rem;
     margin: 2rem 0;
     font-weight: 100;
   }
@@ -116,6 +116,10 @@
     margin-left: 0.675rem;
     width: 2.65rem;
     height: 2.65rem;
+  }
+
+  a:link {
+    text-decoration: none;
   }
 </style>
 
@@ -136,22 +140,36 @@
 <body>
   <main>
     <div class="intro">Francesco Ranellucci</div>
-    <div class="tagline">Computer engineering student, passionate about technology, computer science, electronics,
-      sports and outdoor activities.</div>
+    <div class="tagline">Computer engineering student, passionate about technology and sports.
+      <br> <br> <br>
+      <div class="icons-social">
+        <i class="fas fa-address-card"></i><a target="_blank" href="./resume.pdf">Resume</a><br>
+      </div>
+    </div>
+    <!-- <div class="tagline">Computer engineering student, passionate about technology, computer science, electronics,
+      sports and outdoor activities.</div> -->
+
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
-      <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
-          class="fas fa-address-card"></i></a>
+      <!-- <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
+          class="fas fa-address-card"></i></a> -->
       <!-- <a target="_blank" href="https://frr0.github.io/bio/"><i class="fas fa-user"></i></a> -->
-      <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
-      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
+      <!-- <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
+      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fab fa-linkedin"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
-      <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
+      <!-- <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
       <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
-      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>
+      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
+
+      <i class="fab fa-github"></i><a target="_blank" href="https://github.com/frr0">Github</a> &nbsp;&nbsp;
+      <i class="fab fa-gitlab"></i><a target="_blank" href="https://gitlab.com/fra07">Gitlab</a> &nbsp;&nbsp;
+      <!-- <i class="fab fa-linkedin"></i><a target="_blank" href="https://gitlab.com/fra07">Linkedin</a> &nbsp;&nbsp; -->
+      <i class="fas fa-envelope"></i><a target="_blank" href="mailto:f.ranellucci@outlook.com">E-Mail</a> &nbsp;&nbsp;
+      <i class="fab fa-telegram"></i><a target="_blank" href="https://t.me/fr_hjkl">Telegram</a> &nbsp;&nbsp;
+      <i class="fab fa-strava"></i><a target="_blank" href="https://www.strava.com/athletes/45162421">Strava</a>
     </div>
   </main>
 </body>
