--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
 
-      <i class="fab fa-github"></i><a target="_blank" href="https://github.com/frr0">Github</a> &nbsp;&nbsp;
-      <i class="fab fa-gitlab"></i><a target="_blank" href="https://gitlab.com/fra07">Gitlab</a> &nbsp;&nbsp;
-      <!-- <i class="fab fa-linkedin"></i><a target="_blank" href="https://gitlab.com/fra07">Linkedin</a> &nbsp;&nbsp; -->
-      <i class="fas fa-envelope"></i><a target="_blank" href="mailto:f.ranellucci@outlook.com">E-Mail</a> &nbsp;&nbsp;
-      <i class="fab fa-telegram"></i><a target="_blank" href="https://t.me/fr_hjkl">Telegram</a> &nbsp;&nbsp;
-      <i class="fab fa-strava"></i><a target="_blank" href="https://www.strava.com/athletes/45162421">Strava</a>
+      <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
+      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
+      <!-- <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-linkedin"></i>Linkedin</a> &nbsp;&nbsp; -->
+      <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
+          class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;
+      <a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
+      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>
     </div>
   </main>
 </body>
