--- a/index.html
+++ b/index.html
@@ -164,13 +164,17 @@
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
 
-      <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
-      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
+      <nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
+      </nobr>
+      <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
+      </nobr>
       <!-- <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-linkedin"></i>Linkedin</a> &nbsp;&nbsp; -->
-      <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
-          class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;
-      <a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
-      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>
+      <nobr><a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
+            class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
+      <nobr><a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
+      </nobr>
+      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>
+      </nobr>
     </div>
   </main>
 </body>
