--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   }
 
   .icons-social i {
-    font-size: 1.6em;
+    font-size: 1.9em;
   }
 
   /* Custom Styles */
@@ -143,7 +143,7 @@
     <div class="tagline">Computer engineering student, passionate about technology and sports.
       <br> <br> <br>
       <div class="icons-social">
-        <i class="fas fa-address-card"></i><a target="_blank" href="./resume.pdf">Resume</a><br>
+        <nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i>Resume</a><br></nobr>
       </div>
     </div>
     <!-- <div class="tagline">Computer engineering student, passionate about technology, computer science, electronics,
