--- a/index.html
+++ b/index.html
@@ -146,9 +146,6 @@
         <nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i>Resume</a><br></nobr>
       </div>
     </div>
-    <!-- <div class="tagline">Computer engineering student, passionate about technology, computer science, electronics,
-      sports and outdoor activities.</div> -->
-
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
       <!-- <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
@@ -159,6 +156,7 @@
       <!-- <a target="_blank" href=""><i class="fab fa-linkedin"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
       <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
+      <!-- <nobr><a target="_blank" href=""><i class="fab fa-linkedin"></i>LinkedIn</a>&nbsp;&nbsp;&nbsp;</nobr> -->
       <!-- <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
       <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a> -->
@@ -171,9 +169,13 @@
       <!-- <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-linkedin"></i>Linkedin</a> &nbsp;&nbsp; -->
       <nobr><a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
             class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
-      <nobr><a target="_blank" href="https://t.me/fr_hjkl"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
+
+      <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
       </nobr>
-      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>
+      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i
+            class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp;
+      </nobr>
+      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i class="fas fa-bicycle"></i>Komoot</a>
       </nobr>
     </div>
   </main>
