--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
 
   @media (min-width: 576px) {
     html {
-      font-size: 14px;
+      font-size: 20;
     }
   }
 
   @media (min-width: 768px) {
     html {
-      font-size: 16px;
+      font-size: 20;
     }
   }
 
   @media (min-width: 992px) {
     html {
-      font-size: 18px;
+      font-size: 20;
     }
   }
 
