size font phones 2

--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
     font-family: 'Roboto', sans-serif;
   }
 
+  @media (max-width: 576px) {
+    html {
+      font-size: 20;
+    }
+  }
+
   @media (min-width: 576px) {
     html {
       font-size: 20;
