--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
   @media (max-width: 576px) {
     html {
-      font-size: 17;
+      font-size: 16;
     }
   }
 
@@ -154,35 +154,18 @@
     </div>
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
-      <!-- <a target="_blank" href="https://raw.githubusercontent.com/frr0/cv-website/master/cv.pdf"><i
-          class="fas fa-address-card"></i></a> -->
-      <!-- <a target="_blank" href="https://frr0.github.io/bio/"><i class="fas fa-user"></i></a> -->
-      <!-- <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
-      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a> -->
-      <!-- <a target="_blank" href=""><i class="fab fa-linkedin"></i></a> -->
-      <!-- <a target="_blank" href=""><i class="fab fa-stack-overflow"></i></a> -->
-      <!-- <a target="_blank" href=""><i class="fas fa-laptop-code"></i></a> -->
-      <!-- <nobr><a target="_blank" href=""><i class="fab fa-linkedin"></i>LinkedIn</a>&nbsp;&nbsp;&nbsp;</nobr> -->
-      <!-- <a target="_blank" href="mailto:f.ranellucci@outlook.com"><i class="fas fa-envelope"></i></a>
-      <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
-      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a> -->
-      <!-- <a target="_blank" href=""><i class="fas fa-bicycle"></i></a> -->
-
       <nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
       </nobr>
       <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
       </nobr>
-      <!-- <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-linkedin"></i>Linkedin</a> &nbsp;&nbsp; -->
       <nobr><a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
             class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
-
       <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
       </nobr>
       <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i
-            class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i class="fas fa-bicycle"></i>Komoot</a>
-      </nobr>
+            class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i
+            class="fas fa-bicycle"></i>Komoot</a>&nbsp;&nbsp;&nbsp; </nobr>
     </div>
   </main>
 </body>
