--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </nobr>
       <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
       </nobr>
-      <nobr><a target="_blank" href="mailto:f.ranellucci@outlook.com"><i
+      <nobr><a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i
             class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
       <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
       </nobr>
