--- a/index.html
+++ b/index.html
@@ -154,18 +154,12 @@
     </div>
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
-      <nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i
-            class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
-      <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i
-            class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp; </nobr>
-      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i
-            class="fas fa-bicycle"></i>Komoot</a>&nbsp;&nbsp;&nbsp; </nobr>
-    </div>
+      <nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <nobr><a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
+      <nobr><a target="_blank" href="www.linkedin.com/in/fr07"><i class="fab fa-linkedin"></i>Linkedin</a>&nbsp;&nbsp;&nbsp;</nobr>
+      <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i class="fas fa-bicycle"></i>Komoot</a>&nbsp;&nbsp;&nbsp; </nobr>
   </main>
 </body>
