--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   }
 
   .icons-social i {
-    padding: 10px;
+    padding: 15px;
   }
 
   .devto {
@@ -141,6 +141,9 @@
 
   <link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
+  <script src="https://code.iconify.design/iconify-icon/1.0.1/iconify-icon.min.js"></script>
+
 </head>
 
 <body>
@@ -149,24 +152,33 @@
     <div class="tagline">Computer engineering student, passionate about technology and sports.
       <br> <br> <br>
       <div class="icons-social">
-        <nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i>Resume</a><br></nobr>
+        <!--<nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i>Resume</a><br></nobr>-->
+        <nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i></a><br></nobr>
       </div>
     </div>
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+    <!--https://forkaweso.me/Fork-Awesome/icons/-->
     <div class="icons-social">
-      <nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i
-            class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>
-      <nobr><a target="_blank" href="https://linkedin.com/in/fr07"><i
-            class="fab fa-linkedin"></i>Linkedin</a>&nbsp;&nbsp;&nbsp;</nobr>
-      <nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp;
-      </nobr>
-      <nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i
-            class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp; </nobr>
-      <nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><i
-            class="fas fa-bicycle"></i>Komoot</a>&nbsp;&nbsp;&nbsp; </nobr>
+      <!--<nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i>Github</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+      <!--<nobr><a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i>Gitlab</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+      <!--<nobr><a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i class="fas fa-envelope"></i>E-Mail</a>&nbsp;&nbsp;&nbsp;</nobr>-->
+      <!--<nobr><a target="_blank" href="https://linkedin.com/in/fr07"><i class="fab fa-linkedin"></i>Linkedin</a>&nbsp;&nbsp;&nbsp;</nobr>-->
+      <!--<nobr><a target="_blank" href="https://github.com/frr0"><i class="fab fa-mastodon"></i>Mastodon</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+      <!--<nobr><a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i>Telegram</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+      <!--<nobr><a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i>Strava</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+      <!--<nobr><a target="_blank" href="https://www.komoot.it/user/2696417825775"><font size="6.5"><iconify-icon icon="simple-icons:komoot"></iconify-icon></font>   Komoot</a>&nbsp;&nbsp;&nbsp; </nobr>-->
+
+      <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
+      <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
+      <a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i class="fas fa-envelope"></i></a>
+      <a target="_blank" href="https://linkedin.com/in/fr07"><i class="fab fa-linkedin-square"></i></a>
+      <a rel="me" target="_blank" href="https://mathstodon.xyz/@fra7"><i class="fa fa-mastodon" aria-hidden="true"></i></a>
+      <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
+      <!--<a target="_blank" href="https://github.com/frr0"><i class="fab fa-twitter"></i></a>-->
+      <!--<a target="_blank" href="https://github.com/frr0"><i class="fa fa-discord" aria-hidden="true"></i></a>-->
+      <a target="_blank" href="https://matrix.to/#/@fr7:matrix.org"><i class="fa fa-matrix-org" aria-hidden="true"></i></a>
+      <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>&nbsp;&nbsp;
+      <a target="_blank" href="https://www.komoot.it/user/2696417825775"><font size="6"><iconify-icon icon="simple-icons:komoot"></iconify-icon></font></a>
+      
   </main>
 </body>
