--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
       <a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i class="fas fa-envelope"></i></a>
       <a target="_blank" href="https://linkedin.com/in/fr07"><i class="fab fa-linkedin-square"></i></a>
-      <a rel="me" target="_blank" href="https://mathstodon.xyz/@fra7"><i class="fa fa-mastodon" aria-hidden="true"></i></a>
+      <!--<a rel="me" target="_blank" href="https://mathstodon.xyz/@fra7"><i class="fa fa-mastodon" aria-hidden="true"></i></a>-->
       <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
       <!--<a target="_blank" href="https://github.com/frr0"><i class="fab fa-twitter"></i></a>-->
       <!--<a target="_blank" href="https://github.com/frr0"><i class="fa fa-discord" aria-hidden="true"></i></a>-->
