--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       <a target="_blank" href="https://github.com/frr0"><i class="fab fa-github"></i></a>
       <a target="_blank" href="https://gitlab.com/fra07"><i class="fab fa-gitlab"></i></a>
       <a target="_blank" href="mailto:fra.ranellucci@gmail.com"><i class="fas fa-envelope"></i></a>
-      <a target="_blank" href="https://t.me/fra7r"><i class="fab fa-telegram"></i></a>
+      <a target="_blank" href="https://linkedin.com/in/fr07"><i class="fab fa-linkedin-square"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>&nbsp;&nbsp;
       <a target="_blank" href="https://www.komoot.it/user/2696417825775"><font size="6"><iconify-icon icon="simple-icons:komoot"></iconify-icon></font></a>
       
