--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
       <br> <br> <br>
       <div class="icons-social">
         <nobr><a target="_blank" href="./resume.pdf"><i class="fas fa-address-card"></i></a><br></nobr>
+        <nobr><a target="_blank" href="./adventures.html"><i class="fas fa-bicycle"></i>/<i class="fas fa-mountain"></i></a><br></nobr>
       </div>
     </div>
     <div class="icons-social">
@@ -163,6 +164,9 @@
       <a target="_blank" href="https://linkedin.com/in/fr07"><i class="fab fa-linkedin-square"></i></a>
       <a target="_blank" href="https://www.strava.com/athletes/45162421"><i class="fab fa-strava"></i></a>&nbsp;&nbsp;
       <a target="_blank" href="https://www.komoot.it/user/2696417825775"><font size="6"><iconify-icon icon="simple-icons:komoot"></iconify-icon></font></a>
-      
+
+
   </main>
+
+
 </body>
