--- a/adventures.html
+++ b/adventures.html
@@ -44,7 +44,7 @@ Oropa</a> (111km - 931m) - 2024</li>
 <li><a href="https://www.strava.com/activities/8855727489">Torino -
 Savona</a> (139km - 936m) - 2023</li>
 </ul>
-<h1 id="bikepakings">Bikepakings</h1>
+<h1 id="bikepackings">Bikepakings</h1>
 <ul>
 <li>Oulx (Italy) - Barcelona (Spain) - 2025
 <ul>
@@ -150,7 +150,7 @@ Musinè</a> - 2023</li>
 della Madonna di Ciavanis - Vonzo a Chialamberto, valli di Lanzo</a> -
 2022</li>
 </ul>
-<h1 id="trekkings-backpakings">Trekkings (backpakings)</h1>
+<h1 id="trekkings-backpakings">Trekkings (backpackings)</h1>
 <ul>
 <li>Via degli Dei (Bologna - Firenze) - 2024
 <ul>
