--- a/adventures.html
+++ b/adventures.html
@@ -44,7 +44,7 @@ Oropa</a> (111km - 931m) - 2024</li>
 <li><a href="https://www.strava.com/activities/8855727489">Torino -
 Savona</a> (139km - 936m) - 2023</li>
 </ul>
-<h1 id="bikepackings">Bikepakings</h1>
+<h1 id="bikepackings">Bikepackings</h1>
 <ul>
 <li>Oulx (Italy) - Barcelona (Spain) - 2025
 <ul>
