--- a/adventures.html
+++ b/adventures.html
@@ -1,168 +1,1 @@
-<h1 id="mountains-climbed-by-bike">Mountains climbed by bike</h1>
-<ul>
-<li><a href="https://www.strava.com/activities/15503804219">Saint
-Pantaleon - Cervinia - Col Tzecore - Col de joux - Issime</a> (207km -
-5055m) - 2025</li>
-<li><a href="https://www.strava.com/activities/14526753797">Colletta di
-Cumiana - Colle del Cro - Colle della Vaccera - Montoso - Madda</a>
-(192km - 3954m) - 2025</li>
-<li><a href="https://www.strava.com/activities/14733561118">Colle delle
-Finestre</a> (94km - 1878m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15446183671">Nivolet</a>
-(219km - 2879m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15201766028">Mont
-Ventoux</a> (110km - 2334m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15379758250">Moncenisio -
-Iseran</a> (90km - 3230m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15390539197">Piccolo San
-Bernardo - Aosta Valley</a> (175km - 1825m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15422013916">Izoard</a>
-(105km, 2462m) - 2025</li>
-<li><a href="https://www.strava.com/activities/14033037238">Col del
-Lys</a> (112km - 1364m) - 2025</li>
-<li><a href="https://www.strava.com/activities/15253504548">Tibidabo</a>
-(84km - 1619m) - 2025</li>
-<li><a href="https://www.strava.com/activities/9586783988">Chiaves -
-Sant’Ignazio - Benne di Corio</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9065028494">Sacra di San
-Michele e Colle Braida</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9532096848">Colle della
-Maddalena</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9010632816">Superga</a> -
-2023</li>
-</ul>
-<h1 id="notable-rides">Notable rides</h1>
-<ul>
-<li><a href="https://www.strava.com/activities/12476318644">Torino -
-Milano</a> (155km - 204m) - 2024</li>
-<li><a href="https://www.strava.com/activities/12205668404">Torino -
-Albenga</a> (200km - 1419m) - 2024</li>
-<li><a href="https://www.strava.com/activities/12170004586">Castelnuovo
-Don Bosco</a> (100km - 960m) - 2024</li>
-<li><a href="https://www.strava.com/activities/11339948029">Torino -
-Oropa</a> (111km - 931m) - 2024</li>
-<li><a href="https://www.strava.com/activities/8855727489">Torino -
-Savona</a> (139km - 936m) - 2023</li>
-</ul>
-<h1 id="bikepackings">Bikepackings</h1>
-<ul>
-<li>Oulx (Italy) - Barcelona (Spain) - 2025
-<ul>
-<li><a href="https://www.strava.com/activities/15166378004">Oulx -
-Embrun</a></li>
-<li><a href="https://www.strava.com/activities/15180171854">Enbrun -
-Saint-Roman-de-Malegarde</a></li>
-<li><a href="https://www.strava.com/activities/15201766028">Mont Ventoux
-- TDF</a></li>
-<li><a
-href="https://www.strava.com/activities/15211110628">Saint-Roman-de-Malegarde
-- Montpellier</a></li>
-<li><a href="https://www.strava.com/activities/15222374639">Perpignan -
-Girona</a></li>
-<li><a href="https://www.strava.com/activities/15231878577">Girona -
-Barcelona</a></li>
-</ul></li>
-<li>Marseille (France) - Albenga (Italy) - 2022
-<ul>
-<li><a href="https://www.strava.com/activities/7590755188">Marseille -
-La Ciotat (Stage 1/6)</a></li>
-<li><a href="https://www.strava.com/activities/7598381444">La Ciotat -
-Hyeres (Stage 2/6)</a></li>
-<li><a href="https://www.strava.com/activities/7604270894">Hyeres -
-Saint Raphael (Stage 3/6)</a></li>
-<li><a href="https://www.strava.com/activities/7608082967">Saint Raphael
-- Antibes (Stage 4/6)</a></li>
-<li><a href="https://www.strava.com/activities/7617131913">Antibes -
-Vallebona (Stage 5/6)</a></li>
-<li><a href="https://www.strava.com/activities/7620117425">Vallebona -
-Albenga (Stage 6/6)</a></li>
-</ul></li>
-</ul>
-<h1 id="training-camps">Training Camps</h1>
-<ul>
-<li>Tuscany Training Camp - 2025
-<ul>
-<li><a href="https://www.strava.com/activities/13760560165">Training
-camp day 1.1</a></li>
-<li><a href="https://www.strava.com/activities/13761483800">Training
-camp day 1.2</a></li>
-<li><a href="https://www.strava.com/activities/13769236403">Training
-camp day 2</a></li>
-<li><a href="https://www.strava.com/activities/13776526148">Training
-camp day 3</a></li>
-<li><a href="https://www.strava.com/activities/13787446388">Training
-camp day 4</a></li>
-<li><a href="https://www.strava.com/activities/13795710385">Training
-camp day 5</a></li>
-<li><a href="https://www.strava.com/activities/13806200204">Training
-camp day 6</a></li>
-<li><a href="https://www.strava.com/activities/13814178431">Training
-camp day 7</a></li>
-<li><a href="https://www.strava.com/activities/13820905370">Training
-camp day 8</a></li>
-</ul></li>
-</ul>
-<h1 id="hikes">Hikes</h1>
-<ul>
-<li><a href="https://www.strava.com/activities/14367528397">Monte
-Soglio</a> - 2025</li>
-<li><a href="https://www.strava.com/activities/13216495873">Fontana
-mura, colle della Roussa e lago Rouen</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/13080178207">Bivacco lago
-Laus e lago della Manica</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/13238227344">Bivacco
-Balma</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/12813733111">Bivacco Gias
-Nuovo + bivacco Soardi Fassero</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/13146646465">Rifugio
-Portia - Col del Lys</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/11030170647">Roc Neir</a>
-- 2024</li>
-<li><a href="https://www.strava.com/activities/13033906297">Passo della
-Croce</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/12227711125">Santa
-Cristina da Ceres</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/11598792329">Il Turu</a>
-- 2024</li>
-<li><a href="https://www.strava.com/activities/12916205208">Punta
-Aquila</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/10572390195">Rocca
-Sella</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/10558340133">Rifugio
-Amprimo - Rifugio Toesca</a> - 2024</li>
-<li><a href="https://www.strava.com/activities/10395636371">Forte
-Pramand - Galleria del Seguret - Forte al Seguret</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/10359334072">Monte
-Cotolivier</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/10284802714">Sacra di San
-Michele</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/10206280183">Colle della
-Maddalena - Torino</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9926021747">Puig de Sant
-Martì - Alcudia, Spain</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9670537878">Monte San
-Giorgio - Piossasco</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/9542161649">Monte
-Musinè</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/8877144166">Goja del pis
-- Almese</a> - 2023</li>
-<li><a href="https://www.strava.com/activities/7515442960">Santuario
-della Madonna di Ciavanis - Vonzo a Chialamberto, valli di Lanzo</a> -
-2022</li>
-</ul>
-<h1 id="trekkings-backpakings">Trekkings (backpackings)</h1>
-<ul>
-<li>Via degli Dei (Bologna - Firenze) - 2024
-<ul>
-<li><a href="https://www.strava.com/activities/12005277474">Bologna -
-Brento</a></li>
-<li><a href="https://www.strava.com/activities/12011321077">Brento -
-Madonna dei fornelli</a></li>
-<li><a href="https://www.strava.com/activities/12039308142">Madonna dei
-Fornelli - Passo dell’Osteria Bruciata</a></li>
-<li><a href="https://www.strava.com/activities/12039336345">Passo
-Osteria Bruciata - Tagliaferro</a></li>
-<li><a href="https://www.strava.com/activities/12039360583">Tagliaferro
-- Firenze</a></li>
-</ul></li>
-</ul>
+../Adventures/adventures.html
