--- a/adventures.html
+++ b/adventures.html
@@ -62,10 +62,10 @@ Girona</a></li>
 <li><a href="https://www.strava.com/activities/15231878577">Girona -
 Barcelona</a></li>
 </ul></li>
-<li>Susa (Italy) - Ivrea (Italy) 2025
+<li>Bussoleno (Italy) - Ivrea (Italy) 2025
 <ul>
-<li><a href="https://www.strava.com/activities/15379758250">Susa - Val
-d’Isere</a></li>
+<li><a href="https://www.strava.com/activities/15379758250">Bussoleno -
+Val d’Isere</a></li>
 <li><a href="https://www.strava.com/activities/15390539197">Val d’Isere
 - Ivrea</a></li>
 </ul></li>
