--- a/adventures.html
+++ b/adventures.html
@@ -1,4 +1,4 @@
-<h1 id="mountains-climbed-by-bike">Mountains climbed by bike</h1>
+<h1 id="road-bike-mountain-climbs">Road bike mountain climbs</h1>
 <ul>
 <li><a href="https://www.strava.com/activities/15503804219">Saint
 Pantaleon - Cervinia - Col Tzecore - Col de joux - Issime</a> (207km -
