--- a/index.html
+++ b/index.html
@@ -139,6 +139,19 @@
     .icons-social iconify-icon {
       font-size: 1.7em;
     }
+
+    .main-actions {
+      flex-direction: column;
+      gap: 16px;
+      margin: 30px 0 20px 0;
+    }
+
+    .main-action-btn {
+      width: 100%;
+      justify-content: center;
+      font-size: 1.05em;
+      padding: 16px 24px;
+    }
   }
 </style>
 
