Enhance main action button styling for better alignment and minimum width

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
   .main-action-btn {
     display: flex;
     align-items: center;
+    justify-content: center;
+    min-width: 240px;
     gap: 12px;
     background: #ededed;
     color: #4B5658;
