Update links in adventures and index pages for improved navigation

--- a/adventures.html
+++ b/adventures.html
@@ -297,7 +297,7 @@
 </ul></li>
 </ul>
       <div class="icons-social">
-        <a target="_blank" href="./index.html"><i class="fas fa-home"></i></a>
+        <a href="https://frr0.github.io/"><i class="fas fa-home"></i></a>
       </div>
     </div>
   </main>
