--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <i class="fas fa-address-card"></i>
           Resume
         </a>
-        <a class="main-action-btn" target="_blank" href="./adventures.html" title="Adventures">
+        <a class="main-action-btn" href="./adventures.html" title="Adventures">
           <i class="fas fa-bicycle"></i>
           <i class="fas fa-mountain"></i>
           Adventures
