Enhance main section styling with padding and auto min-height

--- a/adventures.html
+++ b/adventures.html
@@ -163,6 +163,12 @@
     body {
       overflow-x: hidden;
     }
+
+    main {
+      min-height: auto;
+      padding: 20px;
+    }
+
     .tagline {
       padding: 30px 25px;
     }
