--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
   }
 
   @media (max-width: 768px) {
+    main {
+      min-height: auto;
+      padding: 20px;
+    }
+
     .content-card {
       padding: 40px 30px;
     }
