--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     line-height: 1.6;
   }
 
+  html {
+    scroll-behavior: smooth;
+  }
+
   main {
     display: flex;
     flex-direction: column;
@@ -120,9 +124,15 @@
   }
 
   @media (max-width: 768px) {
+    body {
+      display: flex;
+      min-height: 100vh;
+    }
+
     main {
-      min-height: auto;
+      min-height: 100%;
       padding: 20px;
+      width: 100%;
     }
 
     .content-card {
