Update home link to use absolute URL for improved navigation

--- a/adventures.html
+++ b/adventures.html
@@ -238,7 +238,7 @@
 
 <body>
   <main>
-    <a href="./index.html" class="home-link">
+    <a href="frr0.github.io" class="home-link">
       <i class="fas fa-home"></i>
       Back to Home
     </a>
